--- a/posts/data-usage-for-postprocessors/index.qmd
+++ b/posts/data-usage-for-postprocessors/index.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Data Usage with Postprocessing"
-author: "Max Kuhn"
+author: 
+  - Max Kuhn
+  - Simon Couch
 date: "2024-05-07"
 categories:
   - preprocessing
@@ -376,3 +378,5 @@ We’ve described how postprocessing operations can fit into the machine learnin
 We recommend using two different partitions for each of these two stages. 
 
 Thanks to the tidymodels group for review of this post, especially Simon Couch who also edited the [original source of this post](https://github.com/topepo/postprocessing-data). 
+
+EDIT: Simon really deserved to be an author of this post since he was more involved in the development of these ideas than the original post made it sound. I've added him as an author. 
